Bug Fix: remove container overlap with scroll bar.
#6

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -101,6 +101,11 @@ mat-sidenav-container.app-dark {
   text-align: left;
 }
 
+/deep/
+.fullscreen {
+    width: auto !important;
+}
+
 @media (max-width: 959px) {
   .sidenav-content{
     margin-bottom:54px;
